# todomate

./: .gitignore  README.md  manage.py  pyproject.toml
todomate/: asgi.py  settings.py  urls.py  wsgi.py
